Added product owner

--- a/public/js/projects.json
+++ b/public/js/projects.json
@@ -78,9 +78,9 @@
           }
         ],
         "product_owner": {
-          "name": "karam mustafa",
-          "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
-          "facebook": "https://www.facebook.com/karam2mustafa"
+          "name": "Naser Dakhel",
+          "linkedin": "https://www.linkedin.com/in/naser-dakhel",
+          "facebook": "https://www.facebook.com/naser.dakhel.3"
         },
         "scrum_master": {
           "name": "karam mustafa",
