--- a/public/js/projects.json
+++ b/public/js/projects.json
@@ -1,15 +1,10 @@
 {
   "projects": [
     {
-      "title": "Amazing Project",
-      "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
+      "title": "Engineers Platform",
+      "description": "Web Application as a platform for development Syrians Engineers",
       "teams": {
         "frontend": [
-          {
-            "name": "karam mustafa",
-            "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
-            "facebook": "https://www.facebook.com/karam2mustafa"
-          },
           {
             "name": "karam mustafa",
             "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
@@ -23,19 +18,14 @@
         ],
         "backend": [
           {
-            "name": "karam mustafa",
+            "name": "Abdul-Rahman Shayah",
             "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
-            "facebook": "https://www.facebook.com/karam2mustafa"
-          },
-          {
-            "name": "karam mustafa",
-            "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
-            "facebook": "https://www.facebook.com/karam2mustafa"
+            "facebook": "https://www.facebook.com/test"
           }
         ],
         "mobile": [
           {
-            "name": "karam mustafa",
+            "name": "Yaman",
             "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
             "facebook": "https://www.facebook.com/karam2mustafa"
           },{
@@ -46,44 +36,36 @@
         ],
         "devops": [
           {
-            "name": "karam mustafa",
-            "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
-            "facebook": "https://www.facebook.com/karam2mustafa"
-          },{
-            "name": "karam mustafa",
+            "name": "Ali Alhussein",
             "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
             "facebook": "https://www.facebook.com/karam2mustafa"
           }
         ],
         "designers": [
           {
-            "name": "karam mustafa",
-            "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
-            "facebook": "https://www.facebook.com/karam2mustafa"
-          },{
-            "name": "karam mustafa",
+            "name": "Sedrah",
             "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
             "facebook": "https://www.facebook.com/karam2mustafa"
           }
         ],
         "testers": [
           {
-            "name": "karam mustafa",
+            "name": "Dala'a",
             "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
             "facebook": "https://www.facebook.com/karam2mustafa"
           },{
-            "name": "karam mustafa",
+            "name": "mustafa",
             "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
             "facebook": "https://www.facebook.com/karam2mustafa"
           }
         ],
         "product_owner": {
-          "name": "Naser Dakhel",
-          "linkedin": "https://www.linkedin.com/in/naser-dakhel",
-          "facebook": "https://www.facebook.com/naser.dakhel.3"
+          "name": "karam mustafa",
+          "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
+          "facebook": "https://www.facebook.com/karam2mustafa"
         },
         "scrum_master": {
-          "name": "karam mustafa",
+          "name": "ALi Alhussein",
           "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
           "facebook": "https://www.facebook.com/karam2mustafa"
         }
@@ -91,7 +73,7 @@
       "sprints": [
        [
          {
-           "title": "As a customer I want to be able to register new account",
+           "title": "As a user I want to be able to register new account",
            "acceptance_criteria": {
              "what": "What is the requirement",
              "why": "Why you want to develop this feature",
@@ -100,7 +82,7 @@
            "estimation": "5"
          },
          {
-           "title": "As a customer I want to be able to register new account",
+           "title": "As a user I want to be able to choose a specialization",
            "acceptance_criteria": {
              "what": "What is the requirement",
              "why": "Why you want to develop this feature",
@@ -111,7 +93,7 @@
        ],
         [
           {
-            "title": "As a customer I want to be able to register new account",
+            "title": "As a user I want to be able to choose a path",
             "acceptance_criteria": {
               "what": "What is the requirement",
               "why": "Why you want to develop this feature",
@@ -120,7 +102,27 @@
             "estimation": "5"
           },
           {
-            "title": "As a customer I want to be able to register new account",
+            "title": "As a user I want to be able to enrol a cource",
+            "acceptance_criteria": {
+              "what": "What is the requirement",
+              "why": "Why you want to develop this feature",
+              "when": "When you want to develop this feature"
+            },
+            "estimation": "5"
+          }
+        ],
+        [
+          {
+            "title": "As a suer I want to be able to attende a course",
+            "acceptance_criteria": {
+              "what": "What is the requirement",
+              "why": "Why you want to develop this feature",
+              "when": "When you want to develop this feature"
+            },
+            "estimation": "3"
+          },
+          {
+            "title": "As a suer I want to be able to issue a certficate",
             "acceptance_criteria": {
               "what": "What is the requirement",
               "why": "Why you want to develop this feature",
