--- a/public/js/projects.json
+++ b/public/js/projects.json
@@ -26,13 +26,12 @@
         "mobile": [
           {
             "name": "Ahmad Albetar",
-            "name": "Yaman",
             "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
             "facebook": "https://www.facebook.com/"
           },{
             "name": "Yaman",
-            "linkedin": "https://www.linkedin.com/in/karam2mustafa/",
-            "facebook": "https://www.facebook.com/karam2mustafa"
+            "linkedin": "https://www.linkedin.com/in/Yaman Adna/",
+            "facebook": "https://www.facebook.com/يمان أدنا"
           }
         ],
         "devops": [
