--- a/public/js/projects.json
+++ b/public/js/projects.json
@@ -30,7 +30,7 @@
             "facebook": "https://www.facebook.com/"
           },{
             "name": "Yaman",
-            "linkedin": "https://www.linkedin.com/in/Yaman Adna/",
+            "linkedin": "https://www.linkedin.com/in/yaman-adna-405292220/",
             "facebook": "https://www.facebook.com/يمان أدنا"
           }
         ],
